--- a/brafe-puro/index.html
+++ b/brafe-puro/index.html
@@ -8,19 +8,20 @@
   </head>
 
   <body>
-    <header>
-      <a href="#">
-        <img src="./src/assets/brafe.png" alt="Brafé" />
-      </a>
-
-      <nav>
-        <ul>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Produtos</a></li>
-          <li><a href="#">Portfólio</a></li>
-          <li><a href="#">Contato</a></li>
-        </ul>
-      </nav>
+    <header class="menu">
+      <div class="menu-container">
+        <a href="#" class="menu-logo">
+          <img src="./src/assets/brafe.png" alt="Brafé" />
+        </a>
+        <nav class="menu-nav">
+          <ul>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Produtos</a></li>
+            <li><a href="#">Portfólio</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
