--- a/brafe-puro/index.html
+++ b/brafe-puro/index.html
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="intro">
       <h1>
         Cafés com a cara <br />
         do Brasil
