--- a/brafe-1/brafe-puro/index.html
+++ b/brafe-1/brafe-puro/index.html
@@ -51,15 +51,14 @@
           <img src="./src/assets/cafe-2.jpg" alt="Café 2" />
           <h3>Perfeição</h3>
         </div>
-
-        <p>
-          O café é uma bebida produzida a partir dos grãos torrados do fruto do
-          cafeeiro. É servido tradicionalm aente quente, mas também pode ser
-          consumido gelado. Ele é um estimulante, por possuir cafeína —
-          geralmente 80 a 140 mg para cada 207 ml dependendo do método de
-          preparação.
-        </p>
       </div>
+
+      <p>
+        O café é uma bebida produzida a partir dos grãos torrados do fruto do
+        cafeeiro. É servido tradicionalm aente quente, mas também pode ser
+        consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente
+        80 a 140 mg para cada 207 ml dependendo do método de preparação.
+      </p>
     </section>
 
     <section class="products">
