--- a/brafe-1/brafe-flexbox/index.html
+++ b/brafe-1/brafe-flexbox/index.html
@@ -15,11 +15,11 @@
   <body>
     <header class="menu">
       <div class="container">
-        <a href="#" class="menu-logo grid-4">
+        <a href="#" class="menu-logo">
           <img src="./src/assets/brafe.png" alt="Brafé" />
         </a>
 
-        <nav class="menu-nav grid-8">
+        <nav class="menu-nav">
           <ul>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Produtos</a></li>
@@ -42,12 +42,12 @@
       <h2>Uma mistura de</h2>
 
       <div class="container">
-        <div class="about-item grid-6">
+        <div class="about-item">
           <img src="./src/assets/cafe-1.jpg" alt="Café 1" />
           <h3>Amor</h3>
         </div>
 
-        <div class="about-item grid-6">
+        <div class="about-item">
           <img src="./src/assets/cafe-2.jpg" alt="Café 2" />
           <h3>Perfeição</h3>
         </div>
@@ -56,14 +56,15 @@
       <p>
         O café é uma bebida produzida a partir dos grãos torrados do fruto do
         cafeeiro. É servido tradicionalm aente quente, mas também pode ser
-        consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente
-        80 a 140 mg para cada 207 ml dependendo do método de preparação.
+        consumido gelado. Ele é um estimulante, por possuir cafeína —
+        geralmente 80 a 140 mg para cada 207 ml dependendo do método de
+        preparação.
       </p>
     </section>
 
     <section class="products">
       <div class="container">
-        <div class="products-item grid-4">
+        <div class="products-item">
           <h2 class="products-paulista">Paulista</h2>
 
           <p>
@@ -73,7 +74,7 @@
           </p>
         </div>
 
-        <div class="products-item grid-4">
+        <div class="products-item">
           <h2 class="products-carioca">Carioca</h2>
 
           <p>
@@ -83,7 +84,7 @@
           </p>
         </div>
 
-        <div class="products-item grid-4">
+        <div class="products-item">
           <h2 class="products-mineiro">Mineiro</h2>
 
           <p>
@@ -99,11 +100,11 @@
 
     <section class="locations">
       <div class="locations-item container">
-        <div class="grid-6">
+        <div>
           <img src="./src/assets/botafogo.jpg" alt="Brafé unidade Botafogo" />
         </div>
 
-        <div class="grid-6">
+        <div>
           <h2>Botafogo</h2>
           <p>
             As condições climáticas não eram as melhores nessa primeira escolha
@@ -115,11 +116,11 @@
       </div>
 
       <div class="locations-item container">
-        <div class="grid-6">
+        <div>
           <img src="./src/assets/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
         </div>
 
-        <div class="grid-6">
+        <div>
           <h2>Iguatemi</h2>
           <p>
             As condições climáticas não eram as melhores nessa primeira escolha
@@ -131,11 +132,11 @@
       </div>
 
       <div class="locations-item container">
-        <div class="grid-6">
+        <div>
           <img src="./src/assets/mineirao.jpg" alt="Brafé unidade Mineirão" />
         </div>
 
-        <div class="grid-6">
+        <div>
           <h2>Mineirão</h2>
           <p>
             As condições climáticas não eram as melhores nessa primeira escolha
@@ -154,7 +155,7 @@
           <p>promoções e eventos mensais</p>
         </div>
 
-        <form action="#" class="grid-6">
+        <form action="#">
           <label for="email">Email</label>
           <input type="email" placeholder="Digite seu e-mail" required />
           <button type="submit">Enviar</button>
