--- a/brafe-1/brafe-flexbox/index.html
+++ b/brafe-1/brafe-flexbox/index.html
@@ -56,9 +56,8 @@
       <p>
         O café é uma bebida produzida a partir dos grãos torrados do fruto do
         cafeeiro. É servido tradicionalm aente quente, mas também pode ser
-        consumido gelado. Ele é um estimulante, por possuir cafeína —
-        geralmente 80 a 140 mg para cada 207 ml dependendo do método de
-        preparação.
+        consumido gelado. Ele é um estimulante, por possuir cafeína — geralmente
+        80 a 140 mg para cada 207 ml dependendo do método de preparação.
       </p>
     </section>
 
@@ -100,11 +99,11 @@
 
     <section class="locations">
       <div class="locations-item container">
-        <div>
+        <div class="locations-img">
           <img src="./src/assets/botafogo.jpg" alt="Brafé unidade Botafogo" />
         </div>
 
-        <div>
+        <div class="locations-info">
           <h2>Botafogo</h2>
           <p>
             As condições climáticas não eram as melhores nessa primeira escolha
@@ -116,11 +115,11 @@
       </div>
 
       <div class="locations-item container">
-        <div>
+        <div class="locations-img">
           <img src="./src/assets/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
         </div>
 
-        <div>
+        <div class="locations-info">
           <h2>Iguatemi</h2>
           <p>
             As condições climáticas não eram as melhores nessa primeira escolha
@@ -132,11 +131,11 @@
       </div>
 
       <div class="locations-item container">
-        <div>
+        <div class="locations-img">
           <img src="./src/assets/mineirao.jpg" alt="Brafé unidade Mineirão" />
         </div>
 
-        <div>
+        <div class="locations-info">
           <h2>Mineirão</h2>
           <p>
             As condições climáticas não eram as melhores nessa primeira escolha
@@ -170,7 +169,7 @@
           Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro
         </p>
 
-        <a href="#" class="grid-4">
+        <a href="#" class="footer-img grid-4">
           <img src="./src/assets/brafe.png" alt="Brafé" />
         </a>
       </div>
