--- a/brafe-1/brafe-bootstrap/index.html
+++ b/brafe-1/brafe-bootstrap/index.html
@@ -102,54 +102,52 @@
       </div>
     </section>
 
-    <section class="locations">
-      <div class="container">
-        <div class="locations-item row">
-          <div class="col-sm">
-            <img src="./src/assets/botafogo.jpg" alt="Brafé unidade Botafogo" />
-          </div>
-
-          <div class="col-sm">
-            <h2>Botafogo</h2>
-            <p>
-              As condições climáticas não eram as melhores nessa primeira
-              escolha e, entre 1800 e 1850, tentou-se o cultivo.
-            </p>
-
-            <a href="#">Ver mapa</a>
-          </div>
+    <section class="locations container">
+      <div class="locations-item row">
+        <div class="col-sm">
+          <img src="./src/assets/botafogo.jpg" alt="Brafé unidade Botafogo" />
         </div>
 
-        <div class="locations-item row">
-          <div class="col-sm">
-            <img src="./src/assets/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
-          </div>
+        <div class="col-sm">
+          <h2>Botafogo</h2>
+          <p>
+            As condições climáticas não eram as melhores nessa primeira escolha
+            e, entre 1800 e 1850, tentou-se o cultivo.
+          </p>
 
-          <div class="col-sm">
-            <h2>Iguatemi</h2>
-            <p>
-              As condições climáticas não eram as melhores nessa primeira
-              escolha e, entre 1800 e 1850, tentou-se o cultivo.
-            </p>
+          <a href="#">Ver mapa</a>
+        </div>
+      </div>
 
-            <a href="#">Ver mapa</a>
-          </div>
+      <div class="locations-item row">
+        <div class="col-sm">
+          <img src="./src/assets/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
         </div>
 
-        <div class="locations-item row">
-          <div class="col-sm">
-            <img src="./src/assets/mineirao.jpg" alt="Brafé unidade Mineirão" />
-          </div>
+        <div class="col-sm">
+          <h2>Iguatemi</h2>
+          <p>
+            As condições climáticas não eram as melhores nessa primeira escolha
+            e, entre 1800 e 1850, tentou-se o cultivo.
+          </p>
 
-          <div class="col-sm">
-            <h2>Mineirão</h2>
-            <p>
-              As condições climáticas não eram as melhores nessa primeira
-              escolha e, entre 1800 e 1850, tentou-se o cultivo.
-            </p>
+          <a href="#">Ver mapa</a>
+        </div>
+      </div>
 
-            <a href="#">Ver mapa</a>
-          </div>
+      <div class="locations-item row">
+        <div class="col-sm">
+          <img src="./src/assets/mineirao.jpg" alt="Brafé unidade Mineirão" />
+        </div>
+
+        <div class="col-sm">
+          <h2>Mineirão</h2>
+          <p>
+            As condições climáticas não eram as melhores nessa primeira escolha
+            e, entre 1800 e 1850, tentou-se o cultivo.
+          </p>
+
+          <a href="#">Ver mapa</a>
         </div>
       </div>
     </section>
