--- a/brafe-1/brafe-bootstrap/index.html
+++ b/brafe-1/brafe-bootstrap/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="./src/styles/utils/bootstrap.min.css" />
     <link rel="stylesheet" href="./src/styles/style.css" />
-    <title>Brafé</title>
+    <title>Brafé 1</title>
   </head>
 
   <body>
