--- a/brafe-1/brafe-grid/index.html
+++ b/brafe-1/brafe-grid/index.html
@@ -9,7 +9,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./src/styles/style.css" />
-    <title>Brafé</title>
+    <title>Brafé 1</title>
   </head>
 
   <body>
