--- a/brafe-2/brafe-puro/index.html
+++ b/brafe-2/brafe-puro/index.html
@@ -9,8 +9,31 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./src/styles/style.css" />
-    <title>Brafé</title>
+    <title>Brafé 2</title>
   </head>
-  
-  <body></body>
+
+  <body>
+    <header>
+      <div>
+        aberto de 08h às 18h - seg à sáb - rua bartolomeu mitre - botafogo
+      </div>
+
+      <a href="#">
+        <img src="./src/assets/brafe.png" alt="Brafé" />
+      </a>
+
+      <nav>
+        <ul>
+          <li><a href="#">cafés</a></li>
+          <li><a href="#">capuccinos</a></li>
+          <li><a href="#">canecas</a></li>
+          <li><a href="#">souvenir</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div>
+      
+    </div>
+  </body>
 </html>
