--- a/brafe-2/brafe-puro/index.html
+++ b/brafe-2/brafe-puro/index.html
@@ -33,7 +33,28 @@
     </header>
 
     <div>
-      
+      <nav>
+        <h2>Preço</h2>
+        <ul>
+          <li>$</li>
+          <li>$$</li>
+          <li>$$$</li>
+        </ul>
+
+        <h2>Sabor</h2>
+        <ul>
+          <li>Marrom</li>
+          <li>Laranja</li>
+          <li>Amarelo</li>
+        </ul>
+
+        <h2>Tempo</h2>
+        <ul>
+          <li>15min +</li>
+          <li>25min +</li>
+          <li>35min +</li>
+        </ul>
+      </nav>
     </div>
   </body>
 </html>
