--- a/brafe-2/brafe-grid/index.html
+++ b/brafe-2/brafe-grid/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <div class="container">
-      <nav class="filter">
+      <nav class="filter grid-4">
         <h2>Preço</h2>
         <ul>
           <li>$</li>
@@ -56,36 +56,36 @@
         </ul>
       </nav>
 
-      <section class="products">
+      <section class="products grid-8">
         <h1>Capuccinos</h1>
 
-        <ul>
-          <li>
+        <ul class="row-mobile">
+          <li class="grid-mobile-6">
             <img src="./src/assets/cafe-1.jpg" alt="Café 1" />
             <span>R$ 3,25</span>
-            <h2>Vanilla Diceysl</h2>
+            <h2>Vanilla Diceys</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="./src/assets/cafe-2.jpg" alt="Café 2" />
             <span>R$ 4,50</span>
             <h2>Blueberry Latte</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="./src/assets/cafe-3.jpg" alt="Café 3" />
             <span>R$ 3,25</span>
             <h2>Ghostbusters Brown</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="./src/assets/cafe-4.jpg" alt="Café 4" />
             <span>R$ 4,50</span>
             <h2>Strawberry Fields</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="./src/assets/cafe-5.jpg" alt="Café 5" />
             <span>R$ 3,25</span>
             <h2>Scane Comb</h2>
           </li>
-          <li>
+          <li class="grid-mobile-6">
             <img src="./src/assets/cafe-6.jpg" alt="Café 6" />
             <span>R$ 4,50</span>
             <h2>Wild Bill</h2>
