--- a/brafe-3/brafe-puro/index.html
+++ b/brafe-3/brafe-puro/index.html
@@ -40,14 +40,14 @@
         </ul>
       </nav>
 
-      <section>
+      <section class="products">
         <header>
           <h1>Produtos</h1>
-          <a href="#">Adicionar Produtos</a>
+          <a href="#" class="adicionar-produtos">Adicionar Produtos</a>
         </header>
 
         <ul>
-          <li>
+          <li class="products-item">
             <img src="./src/assets/cafe-1.jpg" alt="Café 1" />
             <ul>
               <li><span>Nome</span> Capuccino</li>
@@ -56,7 +56,7 @@
             </ul>
             <a href="#">Editar</a>
           </li>
-          <li>
+          <li class="products-item">
             <img src="./src/assets/cafe-2.jpg" alt="Café 2" />
             <ul>
               <li><span>Nome</span> Capuccino</li>
@@ -65,7 +65,7 @@
             </ul>
             <a href="#">Editar</a>
           </li>
-          <li>
+          <li class="products-item">
             <img src="./src/assets/cafe-3.jpg" alt="Café 3" />
             <ul>
               <li><span>Nome</span> Capuccino</li>
@@ -74,8 +74,26 @@
             </ul>
             <a href="#">Editar</a>
           </li>
-          <li>
+          <li class="products-item">
             <img src="./src/assets/cafe-4.jpg" alt="Café 4" />
+            <ul>
+              <li><span>Nome</span> Capuccino</li>
+              <li><span>Preço</span> R$ 2,45</li>
+              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+            </ul>
+            <a href="#">Editar</a>
+          </li>
+          <li class="products-item">
+            <img src="./src/assets/cafe-1.jpg" alt="Café 1" />
+            <ul>
+              <li><span>Nome</span> Capuccino</li>
+              <li><span>Preço</span> R$ 2,45</li>
+              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+            </ul>
+            <a href="#">Editar</a>
+          </li>
+          <li class="products-item">
+            <img src="./src/assets/cafe-2.jpg" alt="Café 2" />
             <ul>
               <li><span>Nome</span> Capuccino</li>
               <li><span>Preço</span> R$ 2,45</li>
