--- a/brafe-3/brafe-bootstrap/index.html
+++ b/brafe-3/brafe-bootstrap/index.html
@@ -14,95 +14,115 @@
 
   <body>
     <header class="header">
-      <a href="#" class="header-logo">
-        <img src="./src/assets/brafe.png" alt="Brafé" />
-      </a>
+      <div class="container-fluid">
+        <div class="row">
+          <a href="#" class="header-logo mr-auto col-md-4">
+            <img src="./src/assets/brafe.png" alt="Brafé" />
+          </a>
 
-      <nav class="header-menu">
-        <ul>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Produtos</a></li>
-          <li><a href="#">Portfólio</a></li>
-          <li><a href="#">Contato</a></li>
-        </ul>
-      </nav>
+          <nav class="header-menu mr-3 ml-3">
+            <ul>
+              <li><a href="#">Sobre</a></li>
+              <li><a href="#">Produtos</a></li>
+              <li><a href="#">Portfólio</a></li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
 
-    <main class="container">
-      <nav class="side-nav">
-        <ul>
-          <li><a href="#" class="nav-contabilidade">Contabilidade</a></li>
-          <li><a href="#" class="nav-produtos">Produtos</a></li>
-          <li><a href="#" class="nav-paginas">Páginas</a></li>
-          <li><a href="#" class="nav-plugins">Plugins</a></li>
-          <li><a href="#" class="nav-formularios">Formulários</a></li>
-          <li><a href="#" class="nav-hospedagens">Hospedagens</a></li>
-        </ul>
-      </nav>
+    <main class="container-fluid">
+      <div class="row">
+        <nav class="side-nav col-md-4 col-xl-3">
+          <ul>
+            <li><a href="#" class="nav-contabilidade">Contabilidade</a></li>
+            <li><a href="#" class="nav-produtos">Produtos</a></li>
+            <li><a href="#" class="nav-paginas">Páginas</a></li>
+            <li><a href="#" class="nav-plugins">Plugins</a></li>
+            <li><a href="#" class="nav-formularios">Formulários</a></li>
+            <li><a href="#" class="nav-hospedagens">Hospedagens</a></li>
+          </ul>
+        </nav>
 
-      <section class="products">
-        <header>
-          <h1>Produtos</h1>
-          <a href="#" class="adicionar-produtos">Adicionar Produtos</a>
-        </header>
+        <section class="products col-md-8 col-xl-9 mb-5">
+          <header class="row align-items-center mt-3">
+            <h1 class="col">Produtos</h1>
+            <a href="#" class="adicionar-produtos mr-3 ml-3"
+              >Adicionar Produtos</a
+            >
+          </header>
 
-        <ul>
-          <li class="products-item">
-            <img src="./src/assets/cafe-1.jpg" alt="Café 1" />
-            <ul>
-              <li><span>Nome</span> Capuccino</li>
-              <li><span>Preço</span> R$ 2,45</li>
-              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
-            </ul>
-            <a href="#">Editar</a>
-          </li>
-          <li class="products-item">
-            <img src="./src/assets/cafe-2.jpg" alt="Café 2" />
-            <ul>
-              <li><span>Nome</span> Capuccino</li>
-              <li><span>Preço</span> R$ 2,45</li>
-              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
-            </ul>
-            <a href="#">Editar</a>
-          </li>
-          <li class="products-item">
-            <img src="./src/assets/cafe-3.jpg" alt="Café 3" />
-            <ul>
-              <li><span>Nome</span> Capuccino</li>
-              <li><span>Preço</span> R$ 2,45</li>
-              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
-            </ul>
-            <a href="#">Editar</a>
-          </li>
-          <li class="products-item">
-            <img src="./src/assets/cafe-4.jpg" alt="Café 4" />
-            <ul>
-              <li><span>Nome</span> Capuccino</li>
-              <li><span>Preço</span> R$ 2,45</li>
-              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
-            </ul>
-            <a href="#">Editar</a>
-          </li>
-          <li class="products-item">
-            <img src="./src/assets/cafe-1.jpg" alt="Café 1" />
-            <ul>
-              <li><span>Nome</span> Capuccino</li>
-              <li><span>Preço</span> R$ 2,45</li>
-              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
-            </ul>
-            <a href="#">Editar</a>
-          </li>
-          <li class="products-item">
-            <img src="./src/assets/cafe-3.jpg" alt="Café 3" />
-            <ul>
-              <li><span>Nome</span> Capuccino</li>
-              <li><span>Preço</span> R$ 2,45</li>
-              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
-            </ul>
-            <a href="#">Editar</a>
-          </li>
-        </ul>
-      </section>
+          <ul>
+            <li class="products-item">
+              <div class="media">
+                <img src="./src/assets/cafe-1.jpg" alt="Café 1" />
+                <ul class="media-body">
+                  <li><span>Nome</span> Capuccino</li>
+                  <li><span>Preço</span> R$ 2,45</li>
+                  <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+                </ul>
+                <a href="#">Editar</a>
+              </div>
+            </li>
+            <li class="products-item">
+              <div class="media">
+                <img src="./src/assets/cafe-2.jpg" alt="Café 2" />
+                <ul class="media-body">
+                  <li><span>Nome</span> Capuccino</li>
+                  <li><span>Preço</span> R$ 2,45</li>
+                  <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+                </ul>
+                <a href="#">Editar</a>
+              </div>
+            </li>
+            <li class="products-item">
+              <div class="media">
+                <img src="./src/assets/cafe-3.jpg" alt="Café 3" />
+                <ul class="media-body">
+                  <li><span>Nome</span> Capuccino</li>
+                  <li><span>Preço</span> R$ 2,45</li>
+                  <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+                </ul>
+                <a href="#">Editar</a>
+              </div>
+            </li>
+            <li class="products-item">
+              <div class="media">
+                <img src="./src/assets/cafe-4.jpg" alt="Café 4" />
+                <ul class="media-body">
+                  <li><span>Nome</span> Capuccino</li>
+                  <li><span>Preço</span> R$ 2,45</li>
+                  <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+                </ul>
+                <a href="#">Editar</a>
+              </div>
+            </li>
+            <li class="products-item">
+              <div class="media">
+                <img src="./src/assets/cafe-1.jpg" alt="Café 1" />
+                <ul class="media-body">
+                  <li><span>Nome</span> Capuccino</li>
+                  <li><span>Preço</span> R$ 2,45</li>
+                  <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+                </ul>
+                <a href="#">Editar</a>
+              </div>
+            </li>
+            <li class="products-item">
+              <div class="media">
+                <img src="./src/assets/cafe-3.jpg" alt="Café 3" />
+                <ul class="media-body">
+                  <li><span>Nome</span> Capuccino</li>
+                  <li><span>Preço</span> R$ 2,45</li>
+                  <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+                </ul>
+                <a href="#">Editar</a>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
 
     <footer class="footer">
